// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfidenceBandBadge — snapshots > snapshot matches for "high" band 1`] = `
<div>
  <span
    aria-label="Confidence: high"
    class="inline-flex items-center gap-1 rounded-full px-2 py-0.5 text-xs font-medium bg-green-500/15 text-green-700 dark:text-green-400"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-check-big h-3 w-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.801 10A10 10 0 1 1 17 3.335"
      />
      <path
        d="m9 11 3 3L22 4"
      />
    </svg>
    high
  </span>
</div>
`;

exports[`ConfidenceBandBadge — snapshots > snapshot matches for "low" band 1`] = `
<div>
  <span
    aria-label="Confidence: low"
    class="inline-flex items-center gap-1 rounded-full px-2 py-0.5 text-xs font-medium bg-red-500/15 text-red-700 dark:text-red-400"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert h-3 w-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    low
  </span>
</div>
`;

exports[`ConfidenceBandBadge — snapshots > snapshot matches for "medium" band 1`] = `
<div>
  <span
    aria-label="Confidence: medium"
    class="inline-flex items-center gap-1 rounded-full px-2 py-0.5 text-xs font-medium bg-amber-500/15 text-amber-700 dark:text-amber-400"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-minus h-3 w-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
    </svg>
    medium
  </span>
</div>
`;

exports[`ConfidenceBandBadge — snapshots > snapshot matches for "unknown" band 1`] = `
<div>
  <span
    aria-label="Confidence: unknown"
    class="inline-flex items-center gap-1 rounded-full px-2 py-0.5 text-xs font-medium bg-muted text-muted-foreground"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-question-mark h-3 w-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    unknown
  </span>
</div>
`;
